[package]
name = "spine-sys"
version = "0.1.0"
description = "Bindings for spine-c library."
authors = ["Sky Mavis Engineering <engineering@skymavis.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/skymavis/spine-rs"
repository = "https://github.com/skymavis/spine-rs"
categories = ["external-ffi-bindings", "graphics", "rendering"]
keywords = ["spine", "ffi", "bindings"]
include = ["src/**/*", "LICENSE", "README.md"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "skymavis/spine-rs", branch = "master" }
coveralls = { repository = "skymavis/spine-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "skymavis/spine-rs" }
is-it-maintained-open-issues = { repository = "skymavis/spine-rs" }
maintenance = { status = "actively-developed" }

[build-dependencies]
bindgen = "0.53.1"
cmake = "0.1.42"
