[package]
name = "spine"
version = "0.1.0"
description = "Spine runtime for Rust."
authors = ["Sky Mavis Engineering <engineering@skymavis.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/skymavis/spine-rs"
repository = "https://github.com/skymavis/spine-rs"
categories = ["api-bindings", "graphics", "rendering"]
keywords = ["spine"]
include = ["src/**/*", "LICENSE", "README.md"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "skymavis/spine-rs", branch = "master" }
coveralls = { repository = "skymavis/spine-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "skymavis/spine-rs" }
is-it-maintained-open-issues = { repository = "skymavis/spine-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
image = "0.23.0"
glium = { version = "0.26.0", optional = true }
spine-sys = { path = "../spine-sys" }

[dev-dependencies]
lazy_static = "1.4.0"

[[example]]
name = "glium"
required-features = ["glium"]
